a1/brendan_gordon/TEST_PROGRAMS/invalidtype/jonathan_campbell/1.min
var s: string;
var x: int;
var y: int;

y = x + s;
